@@ -1025,11 +1025,6 @@ th.caption {
     <td>"rss" or "backout" values to generate an rss feed or list of commands to back out changes instead showing a normal query result page</td>
   </tr>
   <tr>
-    <td><code>limit=<var>LIMIT</var></code></td>
-    <td>optional</td>
-    <td>maximum number of file-revisions to process during a query. Default is value of <code>row_limit</code> configuration option</td>
-  </tr>
-  <tr>
     <td><code>limit_changes=<var>LIMIT_CHANGES</var></code></td>
     <td>optional</td>
     <td>maximum number of files to list per commit in query results. Default is value of <code>limit_changes</code> configuration option</td>
